# 2025ESWContest_free_1191

./: .gitmodules  README.md  gps.sh  homography_mapper_for_python2
config/: frontview_config.json  topview_config.json
data_processing/: CMakeLists.txt  package.xml
data_processing/msg/: DetectedObject.msg  DetectedObjectArray.msg  ProcessedObject.msg  ProcessedObjectArray.msg
data_processing/src/: data_processing_node.cpp  data_sync_node.cpp
display_system/: CMakeLists.txt  package.xml
display_system/_scripts/: display_node.py  dynamic_publisher_node.py  publisher_node.py
display_system/scripts/: display_node2.py  display_node2_origin.py  dynamic_publisher_node2.py
infra/config/: cctv_pose.json  homography_config.json
infra/module/: homography_mapper.py
infra_ws/src/infra/: infra.py
infra_ws/src/infra/config/: map_config.json
melodic_ws/devel/include/v2v_com/: ObstacleData.h  V2V.h
melodic_ws/devel/lib/python2.7/dist-packages/v2v_com/msg/: _V2V.py  __init__.py
melodic_ws/devel/lib/v2v_com/: publisher_node  subscriber_node
melodic_ws/devel/share/common-lisp/ros/v2v_com/msg/: v2v_com-msg.asd
melodic_ws/devel/share/gennodejs/ros/v2v_com/msg/: V2V.js
melodic_ws/devel/share/roseus/ros/v2v_com/: manifest.l
melodic_ws/devel/share/roseus/ros/v2v_com/msg/: V2V.l
melodic_ws/devel/share/v2v_com/cmake/: v2v_comConfig.cmake
melodic_ws/src/v2v_com/: CMakeLists.txt
melodic_ws/src/v2v_com/src/: subscriber_node.cpp
noetic_ws/devel/include/v2v_com/: ObstacleData.h  V2V.h
noetic_ws/devel/lib/pkgconfig/: v2v_com.pc
noetic_ws/devel/lib/python3/dist-packages/v2v_com/msg/: _ObstacleData.py
noetic_ws/devel/lib/v2v_com/: publisher_node
noetic_ws/devel/share/common-lisp/ros/v2v_com/msg/: ObstacleData.lisp  V2V.lisp  _package.lisp  _package_ObstacleData.lisp  _package_V2V.lisp
noetic_ws/devel/share/gennodejs/ros/v2v_com/msg/: ObstacleData.js  V2V.js  _index.js
noetic_ws/devel/share/roseus/ros/v2v_com/: manifest.l
noetic_ws/devel/share/roseus/ros/v2v_com/msg/: ObstacleData.l  V2V.l
noetic_ws/devel/share/v2v_com/cmake/: v2v_com-msg-paths.cmake  v2v_comConfig.cmake
noetic_ws/log/: latest_list
noetic_ws/src/v2v_com/: CMakeLists.txt  package.xml
noetic_ws/src/v2v_com/msg/: ObstacleData.msg  V2V.msg
noetic_ws/src/v2v_com/src/: publisher_node.cpp
src/data_processing/: package.xml
src/data_processing/include/: processing.h
src/data_processing/src/: main.cpp
src/interface_node/: CMakeLists.txt
src/interface_node/scripts/: homography_mapper.py  interface.py
src/msg_pkg/msg/: DetectedObjectArray.msg  ProcessedObject.msg
vehicle_ws/devel/: .catkin  .rosinstall
vehicle_ws/devel/include/msg_pkg/: DetectedObject.h  DetectedObjectArray.h  GetMapCompressed.h  GetMapCompressedRequest.h  GetMapCompressedResponse.h  ProcessedObject.h  ProcessedObjectArray.h
vehicle_ws/devel/lib/data_processing/: data_processing_node
vehicle_ws/devel/lib/i2c_imu/: i2c_imu_node
vehicle_ws/devel/lib/pkgconfig/: data_processing.pc  i2c_imu.pc  interface_node.pc  msg_pkg.pc  nmea_navsat_driver.pc
vehicle_ws/devel/lib/python2.7/dist-packages/libnmea_navsat_driver/: __init__.py
vehicle_ws/devel/lib/python2.7/dist-packages/msg_pkg/msg/: _DetectedObject.py  _DetectedObjectArray.py  _ProcessedObject.py  _ProcessedObjectArray.py  __init__.py
vehicle_ws/devel/lib/python2.7/dist-packages/msg_pkg/srv/: _GetMapCompressed.py  __init__.py
vehicle_ws/devel/share/common-lisp/ros/msg_pkg/msg/: DetectedObject.lisp  DetectedObjectArray.lisp  ProcessedObject.lisp  ProcessedObjectArray.lisp  _package.lisp  _package_DetectedObject.lisp  _package_DetectedObjectArray.lisp  _package_ProcessedObject.lisp  _package_ProcessedObjectArray.lisp  msg_pkg-msg.asd
vehicle_ws/devel/share/common-lisp/ros/msg_pkg/srv/: GetMapCompressed.lisp  _package.lisp  _package_GetMapCompressed.lisp  msg_pkg-srv.asd
vehicle_ws/devel/share/data_processing/cmake/: data_processingConfig.cmake
vehicle_ws/devel/share/gennodejs/ros/msg_pkg/msg/: DetectedObject.js  DetectedObjectArray.js  ProcessedObject.js  ProcessedObjectArray.js  _index.js
vehicle_ws/devel/share/gennodejs/ros/msg_pkg/srv/: GetMapCompressed.js  _index.js
vehicle_ws/devel/share/i2c_imu/cmake/: i2c_imuConfig.cmake
vehicle_ws/devel/share/interface_node/cmake/: interface_nodeConfig.cmake
vehicle_ws/devel/share/msg_pkg/cmake/: msg_pkg-msg-paths.cmake  msg_pkgConfig.cmake
vehicle_ws/devel/share/nmea_navsat_driver/cmake/: nmea_navsat_driverConfig.cmake
vehicle_ws/devel/share/roseus/ros/msg_pkg/: manifest.l
vehicle_ws/devel/share/roseus/ros/msg_pkg/msg/: DetectedObject.l  DetectedObjectArray.l  ProcessedObject.l  ProcessedObjectArray.l
vehicle_ws/devel/share/roseus/ros/msg_pkg/srv/: GetMapCompressed.l
vehicle_ws/src/data_processing/: CMakeLists.txt
vehicle_ws/src/data_processing/include/: processing.h  topview_srv.h
vehicle_ws/src/data_processing/src/: processing.cpp  topview_srv.cpp
vehicle_ws/src/gps-test/src/nmea_navsat_driver-melodic-devel/scripts/: ntrip.py
vehicle_ws/src/interface_node/: CMakeLists.txt  package.xml
vehicle_ws/src/msg_pkg/: CMakeLists.txt  package.xml
vehicle_ws/src/msg_pkg/msg/: DetectedObject.msg  ProcessedObjectArray.msg
vehicle_ws/src/msg_pkg/srv/: GetMapCompressed.srv
