<?xml version="1.0"?>
<package format="2">
  <name>data_processing</name>
  <version>0.0.0</version>
  <description>The data_synchronizer package</description>
  <maintainer email="nano@todo.todo">nano</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
<build_depend>std_msgs</build_depend>
<exec_depend>std_msgs</exec_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>demo_pkg</depend>
</package>
